tests/ui/asm/x86_64/bad-reg.stderr
error: invalid register class `foo`: unknown register class
  --> $DIR/bad-reg.rs:12:20
   |
LL |         asm!("{}", in(foo) foo);
   |                    ^^^^^^^^^^^
   |
   = note: the following register classes are supported on this target: `reg`, `reg_abcd`, `reg_byte`, `xmm_reg`, `ymm_reg`, `zmm_reg`, `kreg`, `kreg0`, `mmx_reg`, `x87_reg`, `tmm_reg`

error: invalid register `foo`: unknown register
  --> $DIR/bad-reg.rs:14:18
   |
LL |         asm!("", in("foo") foo);
   |                  ^^^^^^^^^^^^^

error: invalid asm template modifier for this register class
  --> $DIR/bad-reg.rs:16:15
   |
LL |         asm!("{:z}", in(reg) foo);
   |               ^^^^   ----------- argument
   |               |
   |               template modifier
   |
   = note: the `reg` register class supports the following template modifiers: `l`, `x`, `e`, `r`

error: invalid asm template modifier for this register class
  --> $DIR/bad-reg.rs:18:15
   |
LL |         asm!("{:r}", in(xmm_reg) foo);
   |               ^^^^   --------------- argument
   |               |
   |               template modifier
   |
   = note: the `xmm_reg` register class supports the following template modifiers: `x`, `y`, `z`

error: asm template modifiers are not allowed for `const` arguments
  --> $DIR/bad-reg.rs:20:15
   |
LL |         asm!("{:a}", const 0);
   |               ^^^^   ------- argument
   |               |
   |               template modifier

error: asm template modifiers are not allowed for `sym` arguments
  --> $DIR/bad-reg.rs:22:15
   |
LL |         asm!("{:a}", sym main);
   |               ^^^^   -------- argument
   |               |
   |               template modifier

error: invalid register `ebp`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:24:18
   |
LL |         asm!("", in("ebp") foo);
   |                  ^^^^^^^^^^^^^

error: invalid register `rsp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:26:18
   |
LL |         asm!("", in("rsp") foo);
   |                  ^^^^^^^^^^^^^

error: invalid register `ip`: the instruction pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:28:18
   |
LL |         asm!("", in("ip") foo);
   |                  ^^^^^^^^^^^^

error: register class `x87_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:31:18
   |
LL |         asm!("", in("st(2)") foo);
   |                  ^^^^^^^^^^^^^^^

error: register class `mmx_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:34:18
   |
LL |         asm!("", in("mm0") foo);
   |                  ^^^^^^^^^^^^^

error: register class `kreg0` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:37:18
   |
LL |         asm!("", in("k0") foo);
   |                  ^^^^^^^^^^^^

error: register class `x87_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:42:20
   |
LL |         asm!("{}", in(x87_reg) foo);
   |                    ^^^^^^^^^^^^^^^

error: register class `mmx_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:45:20
   |
LL |         asm!("{}", in(mmx_reg) foo);
   |                    ^^^^^^^^^^^^^^^

error: register class `x87_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:48:20
   |
LL |         asm!("{}", out(x87_reg) _);
   |                    ^^^^^^^^^^^^^^

error: register class `mmx_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:50:20
   |
LL |         asm!("{}", out(mmx_reg) _);
   |                    ^^^^^^^^^^^^^^

error: register `al` conflicts with register `eax`
  --> $DIR/bad-reg.rs:56:33
   |
LL |         asm!("", in("eax") foo, in("al") bar);
   |                  -------------  ^^^^^^^^^^^^ register `al`
   |                  |
   |                  register `eax`

error: register `rax` conflicts with register `rax`
  --> $DIR/bad-reg.rs:59:33
   |
LL |         asm!("", in("rax") foo, out("rax") bar);
   |                  -------------  ^^^^^^^^^^^^^^ register `rax`
   |                  |
   |                  register `rax`
   |
help: use `lateout` instead of `out` to avoid conflict
  --> $DIR/bad-reg.rs:59:18
   |
LL |         asm!("", in("rax") foo, out("rax") bar);
   |                  ^^^^^^^^^^^^^

error: register `ymm0` conflicts with register `xmm0`
  --> $DIR/bad-reg.rs:64:34
   |
LL |         asm!("", in("xmm0") foo, in("ymm0") bar);
   |                  --------------  ^^^^^^^^^^^^^^ register `ymm0`
   |                  |
   |                  register `xmm0`

error: register `ymm0` conflicts with register `xmm0`
  --> $DIR/bad-reg.rs:66:34
   |
LL |         asm!("", in("xmm0") foo, out("ymm0") bar);
   |                  --------------  ^^^^^^^^^^^^^^^ register `ymm0`
   |                  |
   |                  register `xmm0`
   |
help: use `lateout` instead of `out` to avoid conflict
  --> $DIR/bad-reg.rs:66:18
   |
LL |         asm!("", in("xmm0") foo, out("ymm0") bar);
   |                  ^^^^^^^^^^^^^^

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:31:30
   |
LL |         asm!("", in("st(2)") foo);
   |                              ^^^
   |
   = note: register class `x87_reg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:34:28
   |
LL |         asm!("", in("mm0") foo);
   |                            ^^^
   |
   = note: register class `mmx_reg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:37:27
   |
LL |         asm!("", in("k0") foo);
   |                           ^^^
   |
   = note: register class `kreg0` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:42:32
   |
LL |         asm!("{}", in(x87_reg) foo);
   |                                ^^^
   |
   = note: register class `x87_reg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:45:32
   |
LL |         asm!("{}", in(mmx_reg) foo);
   |                                ^^^
   |
   = note: register class `mmx_reg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:56:42
   |
LL |         asm!("", in("eax") foo, in("al") bar);
   |                                          ^^^
   |
   = note: register class `reg_byte` supports these types: i8

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:61:27
   |
LL |         asm!("", in("al") foo, lateout("al") bar);
   |                           ^^^
   |
   = note: register class `reg_byte` supports these types: i8

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:61:46
   |
LL |         asm!("", in("al") foo, lateout("al") bar);
   |                                              ^^^
   |
   = note: register class `reg_byte` supports these types: i8

error: aborting due to 28 previous errors

